--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ body {
     background-color: var(--Dark-Blue);
 }
 
+/*----------------- Container ------------------*/
+
 .container{
     width: 35rem;
     padding: 1rem 1rem 0 1rem;
@@ -40,6 +42,7 @@ body {
     color: var(--normal-color);
     font-size: 12px;
     margin-bottom: 1rem;
+    letter-spacing: 3px;
 }
 
 .container p {
@@ -48,9 +51,25 @@ body {
     font-size: 28px;
 }
 
+@media (max-width: 580px) {
+    .container {
+        width: 90%;
+    }
+}
+
+/*----------------- Divider ------------------*/
+
 .divider {
     margin: 1rem auto;
 }
+
+@media (max-width: 580px) {
+    .divider {
+        width: 100%;
+    }
+}
+
+/*----------------- Dice ------------------*/
 
 .dice {
     width: 3rem;
