adding hover effect

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ body {
 }
 
 .dice:hover {
-    background-color: hsl(150, 92%, 69%);
+    box-shadow: 0px 0px 10px 5px var(--normal-color);
 }
 
 .dice img {
